[tool.poetry]
name = "swelling_brie"
version = "0.1.0"
description = "using my funky friday time to create a knockoff of the NYT Spelling Bee"
authors = ["Luucccyyyy06 <lucy.bowles@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.3.4"
pandas = "^1.4.2"
plotly = "^5.7.0"
nltk = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
